--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
+    "randomstring": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
